AX: A disabled select element should not be exposed as focusable https://bugs.webkit.org/show_bug.cgi?id=86949

Reviewed by Chris Fleizach.

* LayoutTests/accessibility/disabled-controls-not-focusable-expected.txt: Added.
* LayoutTests/accessibility/disabled-controls-not-focusable.html: Added.
* Source/WebCore/accessibility/AccessibilityListBox.h:
(AccessibilityListBox):
* Source/WebCore/accessibility/AccessibilityMenuList.cpp:
(WebCore::AccessibilityMenuList::canSetFocusAttribute):
(WebCore):
* Source/WebCore/accessibility/AccessibilityMenuList.h:
(AccessibilityMenuList):


Canonical link: https://commits.webkit.org/104692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117803 268f45cc-cd09-0410-ab3c-d52691b4dbfc