Source/WebCore/accessibility/AccessibilityListBox.h
@@ -43,7 +43,6 @@ public:
     
     virtual bool isListBox() const { return true; }
     
-    virtual bool canSetFocusAttribute() const { return true; }
     virtual bool canSetSelectedChildrenAttribute() const;
     void setSelectedChildren(AccessibilityChildrenVector&);
     virtual AccessibilityRole roleValue() const { return ListBoxRole; }
